# idle_buster

./: MANIFEST.in  README.md  setup.cfg
idle_buster/: admin.py  apps.py  models.py  urls.py  views.py
idle_buster/migrations/: 0001_initial.py  0002_alter_ib_user_access_token_alter_ib_user_ext_id_and_more.py  0003_rename_created_step_cache_timestamp_and_more.py  0004_alter_step_cache_timestamp.py
idle_buster/templates/: main_page.html  post_auth.html
